namespace ConnectaOficios.Domain.Enums;

public enum EstadoUsuario
{
    Activo = 1,
    Inactivo = 2
}
